--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "chrome-launcher": "^1.2.0",
     "dotenv": "^17.2.0",
     "node-cron": "^4.2.1",
-    "puppeteer-core": "^24.14.0"
+    "puppeteer": "^24.14.0"
   }
 }
